sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: not found: value getNombreValeur
  var n= getNombreValeur()
         ^AlgBubbleSort1:9: error: not found: value j
      if (getValeur(i)>getValeur(j)){
                                 ^