sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var count= -1
  var n= getNombreValeur()
  
  while (count != 0){
    count= 0
    for (i <- 0  to n-2){
      if (getValeur(i)>getValeur(j)){
        echange(i,i+1)
        count=count+1
      }
    }
  }
}